deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remla
  namespace: remla
  # labels:
  #   app: remla
spec:
  # minReadySeconds: 5
  # revisionHistoryLimit: 5
  # progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: remla
  template:
    metadata:
      namespace: remla
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "10254"
      labels:
        app: remla
    spec:
      containers:
      - name: remla
        # todo - add the remla inference image
        image: stefanprodan/podinfo:6.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
        # todo - mount the volumes here
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        - name: http-metrics
          containerPort: 10254
          protocol: TCP
        command:
        - ./podinfo
        - --port=80
        - --port-metrics=10254
        - --level=info
        - --random-delay=false
        - --random-error=false
        livenessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:80/healthz
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - podcli
            - check
            - http
            - localhost:80/readyz
          initialDelaySeconds: 5
          timeoutSeconds: 5
