deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remla
  namespace: remla
spec:
  selector:
    app: remla
  ports:
    - port: 80
      targetPort: 80
